<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.proyectoindividual.modulo_canchas.MenuCancha" android:background="@color/colorTextoBotones">

    <Button
            android:text="@string/insertar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_ing_can"
            app:layout_constraintStart_toStartOf="@+id/btn_ver_can"
            app:layout_constraintEnd_toEndOf="@+id/btn_ver_can" app:layout_constraintTop_toBottomOf="@+id/btn_ver_can"/>
    <Button
            android:text="@string/modificarEliminar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_mod_can"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/btn_ing_can"
            app:layout_constraintEnd_toEndOf="@+id/btn_ing_can" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_ing_can" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/ver"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_ver_can"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="112dp" android:layout_marginTop="220dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.127"/>
</android.support.constraint.ConstraintLayout>