<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.proyectoindividual.modulo_reservas.MenuReservas" android:background="@color/colorTextoBotones">

    <Button
            android:text="@string/ver"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_ver_res"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="140dp"
            android:layout_marginTop="248dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/insertar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_ing_rs"
            app:layout_constraintStart_toStartOf="@+id/btn_ver_res"
            app:layout_constraintEnd_toEndOf="@+id/btn_ver_res" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/btn_ver_res"/>
    <Button
            android:text="@string/modificarEliminar"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/btn_mod_res"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btn_ing_rs"
            app:layout_constraintEnd_toEndOf="@+id/btn_ing_rs" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="192dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_ing_rs"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>