<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.proyectoindividual.modulo_clientes.CrearCliente" android:background="@android:color/background_light">
    <TextView
            android:text="@string/nombre_cliente"
            android:layout_width="118dp"
            android:layout_height="49dp"
            android:id="@+id/textView4" android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/colorCampos" android:textStyle="bold"
            android:layout_marginTop="184dp"/>
    <TextView
            android:text="Dirrecion"
            android:layout_width="119dp"
            android:layout_height="45dp"
            android:id="@+id/textView7" android:textSize="25sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.115" android:textColor="@color/colorCampos"
            android:textStyle="bold" android:layout_marginTop="260dp" app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:text="@string/cedula_cliente"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:id="@+id/textView8" android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102" android:textColor="@color/colorCampos"
            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142"/>
    <EditText
            android:layout_width="232dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_acc_nom_cli"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_acc_dir_cli"
            app:layout_constraintVertical_bias="0.915" android:hint="@string/nombre_cliente" android:textSize="20sp"
            android:textColor="@color/colorTextoCampos"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_acc_dir_cli"
            app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:hint="Dirrecion" android:textSize="20sp"
            android:textColor="@color/colorTextoCampos" android:layout_marginTop="260dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_acc_ced_cli"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:hint="@string/cedula_cliente" android:textSize="20sp"
            android:textColor="@color/colorTextoCampos" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_acc_tel_cli"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:hint="Telefono" android:textSize="20sp"
            android:textColor="@color/colorTextoCampos" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486"/>
    <Button
            android:layout_width="138dp"
            android:layout_height="49dp"
            android:id="@+id/btn_acc_ing_cli" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.629" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:text="@string/insertar"
            android:backgroundTint="@color/colorBotones" android:textColor="@color/colorTextoBotones"
            app:layout_constraintHorizontal_bias="0.533"/>
    <TextView
            android:text="Telefono"
            android:layout_width="122dp"
            android:layout_height="48dp"

            android:id="@+id/Direccion" android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117" android:textColor="@color/colorCampos"
            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486"/>
</android.support.constraint.ConstraintLayout>