<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorTextoBotones">

    <TextView
            android:text="@string/id_zapato"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintVertical_bias="0.324"
            android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/txt_act_id_can"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="64dp"/>

    <TextView
            android:layout_width="212dp"
            android:layout_height="35dp"
            android:id="@+id/txt_act_id_can"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorTextoBotones" android:textColor="@color/colorTextoCampos"
            android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.016"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.994" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:text="Descripcion"
            android:layout_width="131dp"
            android:layout_height="31dp"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView21" app:layout_constraintVertical_bias="0.859"
            android:textColor="@color/colorCampos" android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/txt_act_cli_res"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="Precio"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView21" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="24sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.405"/>
    <TextView
            android:text="Metros"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:id="@+id/textView22" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorCampos" android:textStyle="bold" android:textSize="24sp"
            tools:ignore="UnknownId" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.563"/>
    <TextView
            android:text="Numero"
            android:layout_width="125dp"
            android:layout_height="26dp"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView9" app:layout_constraintVertical_bias="0.82"
            android:textColor="@color/colorCampos" android:textStyle="bold"
            android:textSize="24sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_act_num_res"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="205dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_act_cli_res"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="196dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.957" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_act_num_res"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_act_cli_res"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.957"/>
    <Button
            android:text="@string/insertar"
            android:layout_width="111dp"
            android:layout_height="33dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_ing_can" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.49" app:layout_constraintVertical_bias="0.805"
            android:background="@color/colorBotones" android:textColor="@color/colorTextoBotones"/>
    <EditText
            android:layout_width="204dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_act_horai_reser" android:layout_marginTop="280dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.921"/>

    <EditText
            android:layout_width="202dp"
            android:layout_height="54dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_act_horaf_r"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="308dp"/>


    <Button
            android:text="@string/actualizar"
            android:layout_width="111dp"
            android:layout_height="33dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_act_can" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.49" app:layout_constraintVertical_bias="0.805"
            android:background="@color/colorBotones" android:textColor="@color/colorTextoBotones"/>
</android.support.constraint.ConstraintLayout>